# dms

./: .env  .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  ai.py  config.py  database.py  deps.py  main.py  messages.py  models.py  security.py  seed_demo.py  status.py  templating.py
app/api/: __init__.py  deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  demand.py  department.py  user.py
app/core/: config.py  csrf.py  rate_limit.py  security.py
app/db/: __init__.py  demo_seed.py  session.py
app/models/: __init__.py  demand.py  department.py  status_log.py  user.py
app/routers/: auth.py  demand.py  user.py
app/services/: __init__.py  ai.py  department.py  prompts.py  status_log.py
app/static/js/: app.js
app/templates/auth/: login.html
app/templates/demand/: form.html
app/templates/user/: list.html  password.html
app/utils/: __init__.py  messages.py  status.py  validation.py
app/web/: __init__.py  context.py  templating.py
app/web/static/css/: app.css
app/web/static/js/: app.js
app/web/templates/: base.html
app/web/templates/auth/: login.html
app/web/templates/demand/: form.html  list.html
app/web/templates/department/: form.html  list.html
app/web/templates/user/: form.html  password.html
scripts/: seed_demo.py
